syntax = "proto3";

package grpc.health.v1;
option go_package = "./pb_health";

import "google/api/annotations.proto";

message DemoHealthCheckRequest {
    string service = 1;
}

message DemoHealthCheckResponse {
    enum ServingStatus {
        UNKNOWN = 0;
        SERVING = 1;
        NOT_SERVING = 2;
        SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
    }
    ServingStatus status = 1;
    string version = 2;
}

service DemoHealth {
    // If the requested service is unknown, the call will fail with status
    // NOT_FOUND.
    rpc Check(DemoHealthCheckRequest) returns (DemoHealthCheckResponse) {
        option (google.api.http) = {
            get: "/grpc/health"
        };
    }
    rpc Watch(DemoHealthCheckRequest) returns (stream DemoHealthCheckResponse);
}